@@ -4,6 +4,9 @@ Griffith ChangeLog
 ------------------
 (c) 2005-2007  Vasco Nunes, Piotr Ożarowski
 
+2007-07-31  Michael Jahn
+	* OFDb movie plugin updated
+
 2007-07-21  Piotr Ożarowski
 	* Warn about problems with connecting to database (f.e. missing modules)
 
